objects/Fare__c.object
<CustomObject>
    <fields>
        <fullName>Flight__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Flight</label>
        <referenceTo>Flight__c</referenceTo>
        <relationshipLabel>Fare</relationshipLabel>
        <relationshipName>Fare1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passenger_Type__c</fullName>
        <label>Passenger Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult</fullName>
                </value>
                <value>
                    <fullName>Children</fullName>
                </value>
                <value>
                    <fullName>Infant</fullName>
                </value>
                <value>
                    <fullName>Senior Citizen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Fare</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Flight__c</columns>
        <columns>Passenger_Type__c</columns>
        <columns>Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fare Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fare</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>